git-svn-id: http://ironman.agnux.com/repositorios/ErpAgnuxV1@1518 ce483f98-b20a-4c78-8f99-c15376fc4320

--- a/erp-quimicos/src/main/webapp/vm/layouts/menu.vm
+++ b/erp-quimicos/src/main/webapp/vm/layouts/menu.vm
@@ -490,6 +490,7 @@
 													<li><a href="../logvehiculomarca/startup.agnux">Marca</a></li>
 													<li><a href="../logvehiculotiporodada/startup.agnux">Tipo Rodada</a></li>
 													<li><a href="../logvehiculotipocaja/startup.agnux">Tipo Caja</a></li>
+													<li><a href="../logtarifario/startup.agnux">Tarifario</a></li>
 												</ul>
 											</li>
 											
