git-svn-id: http://ironman.agnux.com/repositorios/ErpAgnuxV1@1528 ce483f98-b20a-4c78-8f99-c15376fc4320

--- a/erp-quimicos/src/main/webapp/vm/clientsdest/startup.vm
+++ b/erp-quimicos/src/main/webapp/vm/clientsdest/startup.vm
@@ -279,6 +279,9 @@
 															<td width="28"></td>
 															<td width="90">Solicitar&nbsp;efectivo</td>
 															<td><input type="checkbox" name="check_efectivo"></td>
+															<td width="50"></td>
+															<td width="90">Solicitar&nbsp;Cheque</td>
+															<td><input type="checkbox" name="check_cheque"></td>
 															<td width="25"></td>
 														</tr>
 													</table>
