--- a/erp-quimicos/src/main/webapp/vm/layouts/menu.vm
+++ b/erp-quimicos/src/main/webapp/vm/layouts/menu.vm
@@ -86,6 +86,7 @@
 													<li class="topline"><a href="../facdevoluciones/startup.agnux">Devoluci&oacute;n</a></li>
 													<li class="topline"><a href="../remisiones/startup.agnux">Remisiones</a></li>
 													<li class="topline"><a href="../facnomina/startup.agnux">N&oacute;mina</a></li>
+													<li class="topline"><a href="../facaddenda/startup.agnux">Addendas</a></li>
 													<!--
 													<li class="topline"><a href="../facnomina/startup.agnux">N&oacute;mina</a></li>
 													<li class="topline"><a href="#">Factura Venta</a></li>
