--- a/erp-quimicos/src/main/webapp/vm/facaddenda/startup.vm
+++ b/erp-quimicos/src/main/webapp/vm/facaddenda/startup.vm
@@ -6,16 +6,13 @@
         #include("${layoutheader}")
         
         <!--  css for this catalogo -->
-        <link rel="stylesheet" href="../../css/modalbox/facconsultas/formaFacConsultas.css" type="text/css" />
-        <!-- <link rel="stylesheet" href="../../css/modalbox/facconsultas/formaCancelaEmision.css" type="text/css" /> -->
-        
+        <link rel="stylesheet" href="../../css/modalbox/facaddenda/formaFacAddenda.css" type="text/css" />
         
         <!--  js for this catalogo -->
         <script type="text/javascript" src="../../js/components/jquery-form/jquery-form.js"></script>
 		<script type="text/javascript" src="../../js/components/formatearnumeros/agrega_comas.js"></script>
-        <script type="text/javascript" src="../../js/components/modalbox/facconsultas/modalboxFacConsultas.js"></script>
-        <!-- <script type="text/javascript" src="../../js/components/modalbox/facconsultas/modalboxCancelaEmision.js"></script> -->
-        <script type="text/javascript" src="../../js/implements/facconsultas/index.js" ></script>
+        <script type="text/javascript" src="../../js/components/modalbox/facaddenda/modalboxFacAddenda.js"></script>
+        <script type="text/javascript" src="../../js/implements/facaddenda/index.js" ></script>
         
         
         
@@ -210,13 +207,13 @@
 		
 		
 		
-        <!--form for facconsultas -->
-        <form id="formafacconsultas00" action="edit.json" method="POST" >
-                <div id="div_one" class="panelcito_modal facconsultas_div_one"  style="display:none;" title="">
+        <!--form for facaddenda -->
+        <form id="formafacaddenda00" action="edit.json" method="POST" >
+                <div id="div_one" class="panelcito_modal facaddenda_div_one"  style="display:none;" title="">
                 <input type="hidden" name="id_factura">
                 <input type="hidden" name="total_tr">
 					
-                    <div id="div_two" title="" class="facconsultas_div_two">
+                    <div id="div_two" title="" class="facaddenda_div_two">
                         <div class="columns on-2">
                             <div class="fixed column" style="width:1015px; padding-left:6px;"><strong>Consulta de Facturas</strong></div>
                             <div class="fixed column" style="width:20px; height:25px;">
@@ -226,12 +223,11 @@
                     </div>
                     
                     
-                    <div id="div_three" title="" class="facconsultas_div_three">
+                    <div id="div_three" title="" class="facaddenda_div_three">
                         <div class="columns" >
                             <div class=" fixed column">
                                 <ul class="pestanas">
                                     <li><a href="#tabx-1"><strong>Factura</strong></a></li>
-                                    <li><a href="#tabx-2"><strong>Addenda</strong></a></li>
                                 </ul>
                             </div>
                         </div>
@@ -622,222 +618,6 @@
 
 
                                     </div>
-                                    
-                                    
-                                    
-                                    
-                                    <!--Tab pestaña Addenda   style="display:none;"-->
-                                    <div id="tabx-2" class="contenidoPes" >
-										
-											
-											<table border="0" id="table_addendas" >
-												<tr id="adenda1">
-													<td width="5" height="10"></td>
-													<td>
-														
-														<table border="0" class="gral">
-															<tr>
-																<td width="90">Orden de Compra</td>
-																<td width="100"><input type="text" name="adenda1_campo7" style="width:100px;"></td>
-																<td width="40"><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_campo7"></div></td>
-																<td width="90">Moneda</td>
-																<td width="100"><input type="text" name="adenda1_campo8" style="width:100px;"></td>
-																<td width="25"><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_campo8"></div></td>
-															</tr>
-															
-															<tr>
-																<td width="90" height="15"></td>
-																<td width="100"></td>
-																<td width="40"></td>
-																<td width="90"></td>
-																<td width="100"></td>
-																<td width="25"></td>
-															</tr>
-															
-															<tr>
-																<td width="90">No. de Entrada</td>
-																<td width="100"><input type="text" name="adenda1_campo1" style="width:100px;"></td>
-																<td width="40"><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_campo1"></div></td>
-																<td width="90">No. de Remisi&oacute;n</td>
-																<td width="100"><input type="text" name="adenda1_campo2" style="width:100px;"></td>
-																<td width="25"><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_campo2"></div></td>
-															</tr>
-															<tr>
-																<td width="90" height="15"></td>
-																<td width="100"></td>
-																<td width="40"></td>
-																<td width="90"></td>
-																<td width="100"></td>
-																<td width="25"></td>
-															</tr>
-															<tr>
-																<td width="90">Consignaci&oacute;n</td>
-																<td width="100"><input type="checkbox" name="check_adenda1_campo3"></td>
-																<td width="40"></td>
-																<td width="90">Centro de Costos</td>
-																<td width="100"><input type="text" name="adenda1_campo4" style="width:100px;"></td>
-																<td width="25"><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_campo4"></div></td>
-															</tr>
-															<tr>
-																<td width="90" height="12"></td>
-																<td width="100"></td>
-																<td width="40"></td>
-																<td width="90"></td>
-																<td width="100"></td>
-																<td width="25"></td>
-															</tr>
-															<tr>
-																<td width="90">Fecha Inicio</td>
-																<td width="100"><input type="text" name="adenda1_campo5" style="width:100px;"></td>
-																<td width="40"><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_campo5"></div></td>
-																<td width="90">Fecha Fin</td>
-																<td width="100"><input type="text" name="adenda1_campo6" style="width:100px;"></td>
-																<td width="25"><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_campo6"></div></td>
-															</tr>
-															<tr>
-																<td width="90" height="45"></td>
-																<td width="100"></td>
-																<td width="40"></td>
-																<td width="90"></td>
-																<td width="100"></td>
-																<td width="25"></td>
-															</tr>
-															
-														</table>
-													
-													</td>
-													<td width="25" height="10"></td>
-												</tr>
-												
-												<tr id="adenda2">
-													<td width="5" height="10"></td>
-													<td></td>
-													<td width="25" height="10"></td>
-												</tr>
-												
-												<tr id="adenda3">
-													<td width="5" height="10"></td>
-													<td style="border:1px solid #C1DAD7;">
-													
-														<table border="0" class="gral">
-															<tr>
-																<td width="445" colspan="6" style="background-color:rgb(180,180,180);">Datos para la Addenda</td>
-																<!--
-																<td width="100"></td>
-																<td width="40"></td>
-																<td width="90"></td>
-																<td width="100"></td>
-																<td width="25"></td>
-																-->
-															</tr>
-															
-															<tr>
-																<td width="90" height="10"></td>
-																<td width="100"></td>
-																<td width="40"></td>
-																<td width="90"></td>
-																<td width="100"></td>
-																<td width="25"></td>
-															</tr>
-															
-															<tr>
-																<td width="90">Correo Emisor</td>
-																<td width="330" colspan="4"><input type="text" name="adenda3_campo2" style="width:330px;"></td>
-																<td width="25"><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_campo2"></div></td>
-															</tr>
-															
-															<tr>
-																<td width="90" height="10"></td>
-																<td width="100"></td>
-																<td width="40"></td>
-																<td width="90"></td>
-																<td width="100"></td>
-																<td width="25"></td>
-															</tr>
-															
-															<tr>
-																<td width="90">Orden de Compra</td>
-																<td width="100"><input type="text" name="adenda3_campo1" style="width:100px;"></td>
-																<td width="40"><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_campo1"></div></td>
-																<td width="90"></td>
-																<td width="100"></td>
-																<td width="25"></td>
-															</tr>
-															
-															<tr>
-																<td width="90" height="10"></td>
-																<td width="100"></td>
-																<td width="40"></td>
-																<td width="90"></td>
-																<td width="100"></td>
-																<td width="25"></td>
-															</tr>
-															
-															<tr>
-																<td width="90">Moneda</td>
-																<td width="100"><input type="text" name="adenda3_campo3" style="width:100px;"></td>
-																<td width="40"><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_campo3"></div></td>
-																<td width="90">Tipo de Cambio</td>
-																<td width="100"><input type="text" name="adenda3_campo4" style="width:100px;"></td>
-																<td width="25"><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_campo4"></div></td>
-															</tr>
-															<tr>
-																<td width="90" height="10"></td>
-																<td width="100"></td>
-																<td width="40"></td>
-																<td width="90"></td>
-																<td width="100"></td>
-																<td width="25"></td>
-															</tr>
-															
-															<tr>
-																<td width="90">Subtotal</td>
-																<td width="100"><input type="text" name="adenda3_campo5" style="width:100px; align:right;"></td>
-																<td width="40"><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_campo5"></div></td>
-																<td width="90">Total</td>
-																<td width="100"><input type="text" name="adenda3_campo6" style="width:100px; align:right;"></td>
-																<td width="25"><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_campo6"></div></td>
-															</tr>
-															<!--
-															<tr>
-																<td width="90" height="12"></td>
-																<td width="100"></td>
-																<td width="40"></td>
-																<td width="90"></td>
-																<td width="100"></td>
-																<td width="25"></td>
-															</tr>
-															-->
-														</table>
-													</td>
-													<td width="25" height="10"></td>
-												</tr>
-												<tr>
-													<td width="5" height="10"></td>
-													<td></td>
-													<td width="25" height="10"></td>
-												</tr>
-												<tr>
-													<td width="5" height="10"></td>
-													<td align="right" style="padding-right:25px;">
-														<input TYPE="button" id="agregar_addenda" value="Agregar Addenda" style="width:100px; font-weight:bold;">
-													</td>
-													<td width="25" height="10"></td>
-												</tr>
-												
-												<tr id="adenda3">
-													<td height="339"></td>
-													<td height="339"></td>
-													<td height="339"></td>
-												</tr>
-												
-												
-											</table>
-										
-										
-										
-									</div>
-                                    
 
                                 </div>
                             </div>
@@ -865,7 +645,7 @@
         
         
         #include("${layoutfooter}")
-			
+        
         
     </body>
 </html>	
