--- a/erp-quimicos/src/main/webapp/css/components/menu/welErp.css
+++ b/erp-quimicos/src/main/webapp/css/components/menu/welErp.css
@@ -266,3 +266,18 @@
     width:16px;
     height:15px;
 }
+
+.onmouseOutFind {
+	background-image: url(../../../img/search.png);
+	background-repeat: no-repeat;
+    width:16px;
+    height:15px;
+}
+
+.onmouseOverFind {
+	background-image: url(../../../img/search1.png);
+	background-repeat: no-repeat;
+    width:16px;
+    height:15px;
+}
+
