--- a/erp-quimicos/src/main/webapp/vm/clientsdest/startup.vm
+++ b/erp-quimicos/src/main/webapp/vm/clientsdest/startup.vm
@@ -121,7 +121,6 @@
 									
                                     <div id="tabx-1" class="contenidoPes" >
 										
-										
 										<table border="0" class="gral">
 											<tr>
 												<td width="5"></td>
@@ -312,11 +311,40 @@
 												<td width="25"></td>
 											</tr>
 											
+
+											<tr>
+												<td colspan="16" height="12"></td>
+											</tr>
+											
+											<tr>
+												<td colspan="16" height="8" style="border-top:1px solid #C1DAD7; border-bottom:1px solid #C1DAD7; border-left:1px solid #FFFFFF; border-right: 1px solid #FFFFFF; background-color:#D4D3D3;">&nbsp;&nbsp;&nbsp;Seleccionar maniobra</td>
+											</tr>
+											<tr>
+												<td colspan="16" height="8"></td>
+											</tr>
+											<tr>
+												<td colspan="16">
+													<table border="0">
+														<tr>
+															<td width="5"></td>
+															<td width="75">Servicio</td>
+															<td><select name="select_serv" style="width:258px;"></select></td>
+															<td width="30"><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_servadic"></div></td>
+															<td width="40">Costo</td>
+															<td><INPUT TYPE="text" name="costo_serv" style="width:80px;"></td>
+															<td width="25"><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_costo"></div></td>
+														</tr>
+													</table>
+												</td>
+											</tr>
 											
 										</table>
                                         
-                                        
                                     </div>
+									
+									
+									
+									
 									
                                 </div>
                             </div>
